@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class User {
    - email: String
    - phone: String
    - role: String
}

class DeactivateAdvertisementUI {
    + deactivateAdvertisement(id)
}

class Advertisement {
    - id : String
    - title: String
    - description: String
    - date: LocalDate
    - municipality: String
    - status : AdvertisementStatus
    + Advertisement(designation, status)
}


class AdvertisementController {
    + deactivateAdvertisement(id: String)
}

class AdvertisementService {
    + deactivateAdvertisement(id: String)
}

interface AdvertisementRepository {
    + findById(id: String)
    + save(advertisement :Advertisement)
}


User .> DeactivateAdvertisementUI : Requests
DeactivateAdvertisementUI .> AdvertisementController
AdvertisementController ..> AdvertisementService
AdvertisementService ..> AdvertisementRepository
AdvertisementRepository "1" --> "*" Advertisement : advertisement



@enduml
